--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -37,13 +37,16 @@ section.home .row .col button{
 }
 .btn-group button{
     background: linear-gradient(90deg, #a163f7 0%, #45e3ff 100%);
+    font-size: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 @media screen and (max-width:767px) {
     section.home .row .col h2{
-        font-size: 55px;
+        font-size: 65px;
     }
     section.home .row .col h1{
-        font-size: 20px;
+        font-size: 30px;
         
     }
     
