--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -20,34 +20,42 @@ section.home .row .col img{
     width: 100%;
 }
 section.home .row .col h2{
-    font-size: 70px;
+    font-size: 5rem;;
     text-transform: uppercase;
     text-align: center;
 }
 section.home .row .col h1{
-    margin-top: 20px;
+    margin-top: 2rem;
     font-size: 30px;
     
 }
 section.home .row .col h1 span{
     color: #45e3ff;
 }
-section.home .row .col button{
-    margin-top: 20px;
-}
+
 .btn-group button{
     background: linear-gradient(90deg, #a163f7 0%, #45e3ff 100%);
     font-size: 20px;
     padding-left: 20px;
     padding-right: 20px;
+    margin-top: 20px;
+    outline: none;
+    border: none;
+}
+.btn-group ul{
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0) 100%);
+    backdrop-filter: blur(15px);
+}
+.btn-group ul li a{
+    color: #fff;
 }
 @media screen and (max-width:767px) {
-    section.home .row .col h2{
+    /* section.home .row .col h2{
         font-size: 65px;
     }
     section.home .row .col h1{
         font-size: 30px;
         
-    }
+    } */
     
 }
