--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -19,17 +19,18 @@ section.home .row .col img{
     margin-top: 20px;
     width: 100%;
 }
-section.home .row .col h2{
-    font-size: 5rem;;
+section.home .row .col h1{
+font-size: 5rem;
     text-transform: uppercase;
     text-align: center;
 }
-section.home .row .col h1{
-    margin-top: 2rem;
-    font-size: 30px;
+section.home .row .col h2{
+    margin-top: 20px;
+    font-size: 2rem;
+
     
 }
-section.home .row .col h1 span{
+section.home .row .col h2 span{
     color: #45e3ff;
 }
 
@@ -50,12 +51,12 @@ section.home .row .col h1 span{
     color: #fff;
 }
 @media screen and (max-width:767px) {
-    /* section.home .row .col h2{
-        font-size: 65px;
-    }
     section.home .row .col h1{
-        font-size: 30px;
+        font-size: 4rem;
+    }
+    section.home .row .col h2{
+        font-size: 1rem;
         
-    } */
+    }
     
 }
