--- a/assets/css/control.css
+++ b/assets/css/control.css
@@ -1,6 +1,7 @@
 /* ===== Google Font Import - Poppins ===== */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
 @import url(./home.css);
+@import url(./services.css);
 
 *{
     padding: 0;
@@ -61,4 +62,34 @@
 body{
     background-image: var(--body-color);
     overflow-x: hidden;
+}
+
+section .header {
+    width: 100%;
+    display: flex;
+    color: var(--font-color);
+    align-items: center;
+    justify-content: center;
+    margin-top: 40px;
+}
+section .header img {
+    width: 90px;
+}
+button{
+    background: linear-gradient(90deg, #a163f7 0%, #45e3ff 100%);
+    font-size: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-top: 20px;
+    outline: none;
+    border: none;
+}
+a.btn{
+    background: linear-gradient(90deg, #a163f7 0%, #45e3ff 100%);
+    font-size: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-top: 20px;
+    outline: none;
+    border: none;
 }
