--- a/assets/css/control.css
+++ b/assets/css/control.css
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
 @import url(./home.css);
 @import url(./services.css);
+@import url(./skills.css);
 
 *{
     padding: 0;
@@ -92,4 +93,5 @@ a.btn{
     margin-top: 20px;
     outline: none;
     border: none;
+
 }
