--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -51,9 +51,14 @@
  
  }  
  /* hide content */  
- .content {  
-  display: none;  
- }  
+ .content {
+  display: none;
+  transition: all 0.4s ease-in-out ;
+  -webkit-transition: all 0.4s ease-in-out ;
+  -moz-transition: all 0.4s ease-in-out ;
+  -ms-transition: all 0.4s ease-in-out ;
+  -o-transition: all 0.4s ease-in-out ;
+}  
  .tab-btn.active {  
     background: linear-gradient(90deg, #a163f7 0%, #45e3ff 100%);
  }  
@@ -82,8 +87,8 @@
 }  
 .card-wrapper {  
   position: relative;  
-  width: 400px;  
-  height: 200px;  
+  width: 40%;
+  height: 220px;
   border-radius: 20px;  
   overflow: hidden;  
   transition: all 0.3s ease-in-out;  
@@ -110,6 +115,7 @@
 }  
 .card-bottom {
   width: 100%;
+  height: 220px;
   position: absolute;
   z-index: 20;
   display: nonee;
@@ -128,7 +134,41 @@
   line-height: 40px;  
   font-weight: bold;  
   letter-spacing: 1px;  
+ 
 }  
 .bottom-text {  
   font-size: 15px;  
+ 
 } 
+
+.link-btn i{
+  margin-top: -10px;
+  padding: 30px;
+  background: #fff;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  font-size: 30px;
+  margin-left:87%;
+  color: #cccccc;
+  cursor: pointer;
+  transition:all 0.2s ease-in-out;
+  -webkit-transition:all 0.2s ease-in-out;
+  -moz-transition:all 0.2s ease-in-out;
+  -ms-transition:all 0.2s ease-in-out;
+  -o-transition:all 0.2s ease-in-out;
+}
+.link-btn i:hover{
+  color: #45e3ff;
+  
+}
+
+@media screen and (max-width: 768px) {
+  .card-wrapper { 
+    width:100% ;
+  }
+}
+
+  
