--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -151,7 +151,7 @@
   -ms-border-radius: 50%;
   -o-border-radius: 50%;
   font-size: 30px;
-  margin-left:87%;
+  margin-left:85%;
   color: #cccccc;
   cursor: pointer;
   transition:all 0.2s ease-in-out;
@@ -168,6 +168,15 @@
 @media screen and (max-width: 768px) {
   .card-wrapper { 
     width:100% ;
+    height: 170px;
+  }
+  .card-bottom {
+   width: 100%;
+   height: 170px;
+  }
+ 
+  .link-btn i{
+    margin-top: -60px;
   }
 }
 
