--- a/assets/css/control.css
+++ b/assets/css/control.css
@@ -5,6 +5,7 @@
 @import url(./skills.css);
 @import url(./portfolio.css);
 @import url(./contact.css);
+@import url(./footer.css);
 
 *{
     padding: 0;
