--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -88,7 +88,7 @@
 .card-wrapper {  
   position: relative;  
   width: 40%;
-  height: 220px;
+  height: 250px;
   border-radius: 20px;  
   overflow: hidden;  
   transition: all 0.3s ease-in-out;  
@@ -115,7 +115,7 @@
 }  
 .card-bottom {
   width: 100%;
-  height: 220px;
+  height: 250px;
   position: absolute;
   z-index: 20;
   display: nonee;
@@ -142,7 +142,7 @@
 } 
 
 .link-btn i{
-  margin-top: -10px;
+  margin-top: 10px;
   padding: 30px;
   background: #fff;
   border-radius: 50%;
@@ -167,16 +167,17 @@
 
 @media screen and (max-width: 768px) {
   .card-wrapper { 
-    width:100% ;
-    height: 170px;
+    width: 90%;
+    height: 200px;
   }
   .card-bottom {
    width: 100%;
-   height: 170px;
+   height: 200px;
   }
  
   .link-btn i{
     margin-top: -60px;
+    margin-left:81%;
   }
 }
 
