--- a/assets/css/control.css
+++ b/assets/css/control.css
@@ -124,9 +124,11 @@ a.btn{
     -ms-transition: all 0.7s ease-in-out;
     -o-transition: all 0.7s ease-in-out;
 }
-.btn-top i{
-    font-size: 1.2rem;
+.btn-top svg{
+    width: 60px;
+    height: 60px;
     padding: 20px;
+    fill: #fff !important;
     cursor: pointer;
 
 }
