--- a/assets/css/loading.css
+++ b/assets/css/loading.css
@@ -15,7 +15,9 @@ z-index: 100000;
 flex-direction: column;
 flex-wrap: nowrap;
 }
-
+.loading-screen img{
+    width: 100%;
+}
 .spinner-border{
     width: 2.5rem !important;
     height: 2.5rem !important;
