--- a/assets/css/services.css
+++ b/assets/css/services.css
@@ -14,3 +14,6 @@ section.services .row .card{
     -ms-border-radius: 20px;
     -o-border-radius: 20px;
 }
+section.services .row .card img{
+    width: 100%;
+}
