--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -115,7 +115,7 @@
 }  
 .card-bottom {
   width: 100%;
-  height: 250px;
+  height: 100%;
   position: absolute;
   z-index: 20;
   display: nonee;
@@ -142,7 +142,6 @@
 } 
 
 .link-btn svg{
-  margin-top: 10px;
   padding: 30px;
   width: 100px;
   height: 100px;
@@ -153,13 +152,15 @@
   -moz-border-radius: 50%;
   -ms-border-radius: 50%;
   -o-border-radius: 50%;
-  margin-left:85%;
   cursor: pointer;
   transition:all 0.2s ease-in-out;
   -webkit-transition:all 0.2s ease-in-out;
   -moz-transition:all 0.2s ease-in-out;
   -ms-transition:all 0.2s ease-in-out;
   -o-transition:all 0.2s ease-in-out;
+  position: fixed;
+  right:-30px;
+  bottom: 0;
 }
 .link-btn svg:hover{
   fill: #45e3ff !important;
@@ -168,18 +169,18 @@
 
 @media screen and (max-width: 768px) {
   .card-wrapper { 
-    width: 90%;
-    height: 200px;
+    width:100%;
+    height: auto;
   }
   .card-bottom {
    width: 100%;
-   height: 200px;
+   height: auto;
   }
  
-  .link-btn svg{
-    margin-top: -40px;
+  /* .link-btn svg{
+    margin-top: 10px;
     margin-left:81%;
-  }
+  } */
 }
 
   
