--- a/assets/css/control.css
+++ b/assets/css/control.css
@@ -28,6 +28,7 @@
     :root {
         --body-color: linear-gradient(180deg, rgb(42, 47, 80) 0%, #4757a0 100%);
         --font-color: #ffffff;
+        --p-color: #dbdbdb;
         --scrollbar: linear-gradient(180deg, #a163f7 0%, #45e3ff 100%);
         --scrollbar-horzentel: linear-gradient(90deg, #a163f7 0%, #45e3ff 100%);
 
@@ -38,6 +39,7 @@
     :root {
         --body-color: linear-gradient(180deg, rgb(255,254,241) 0%, #45e3ff 100%);
         --font-color: #000000;
+        --p-color: #a3a3a3;
         --scrollbar: linear-gradient(180deg, #45e3ff 0%, #a163f7 100%);
         --scrollbar-horzentel: linear-gradient(90deg, #45e3ff 0%, #a163f7 100%);
 
