--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -134,10 +134,12 @@
   line-height: 40px;  
   font-weight: bold;  
   letter-spacing: 1px;  
+  color: #fff
  
 }  
 .bottom-text {  
   font-size: 15px;  
+  color: #dadada;
  
 } 
 
