--- a/assets/css/services.css
+++ b/assets/css/services.css
@@ -14,6 +14,12 @@ section.services .row .card{
     -ms-border-radius: 20px;
     -o-border-radius: 20px;
 }
+section.services .row .card h5{
+color: var(--font-color) !important;
+}
+section.services .row .card p{
+    color: var(--p-color) !important;
+    }
 section.services .row .card img{
     width: 100% ;
 }
